# autofingering

./: .gitignore  LICENSE  README.md  pyproject.toml
autofingering/: __init__.py  __main__.py  fingering.py  hand.py  hmm.py  sheetreader.py
tests/: test_autofingering.py
